--- a/src/app/pages/purpose/purpose.component.html
+++ b/src/app/pages/purpose/purpose.component.html
@@ -196,7 +196,7 @@
         <br>
         <br>
         <div *ngIf="instituteData != null || hrdData != null" style="display: flex; justify-content: center;">
-            <p-button label="View Cart" styleClass="p-button-success" (click)="viewCart()"></p-button>
+            <p-button label="PREVIEW" styleClass="p-button-success" (click)="previewApplication()"></p-button>
         </div>
         <br>
     </div>
