--- a/src/app/pages/preview-application/preview-application.component.css
+++ b/src/app/pages/preview-application/preview-application.component.css
@@ -1,30 +1,26 @@
 .custom-header {
-    background-color: rgb(122, 122, 201);
+  background-color: rgb(122, 122, 201);
 }
 
-.card-header{
-    background-color: rgb(122, 122, 201);
+.card-header {
+  background-color: rgb(122, 122, 201);
 }
 
 .divider {
-    display: none;
-  }
-  
-  .divider.show {
-    display: block;
-  }
-  
-  
-  
-  
-  
-  
-  
+  display: none;
+}
 
+.divider.show {
+  display: block;
+}
 
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(122, 122, 201);
+}
 
-
-
-
-
-
+.header-content {
+  flex: 1;
+} 
